chore: storefront mdx and icon fixes (#272)
* 📦 Changed icon package to @navikt/aksel-icons

* 🔧 Made icons on Nav- and Subject layout configurable

* 🔧 Fixed MDX content not showing up same pages

--- a/storefront/layouts/FrontpageLayout/FrontpageLayout.module.css
+++ b/storefront/layouts/FrontpageLayout/FrontpageLayout.module.css
@@ -19,5 +19,5 @@
 }
 
 .link svg {
-  margin-right: 16px;
+  margin-right: 12px;
 }
